--- a/style.css
+++ b/style.css
@@ -32,10 +32,10 @@ h1 {
 }
 /* Coloring for drop-off (top border) */
 .mother-dropoff {
- border-top: 10px solid #8B8000;
+ border-top: 10px solid #FFC0CB;
 }
 .father-dropoff {
- border-top: 10px solid #00008B;
+ border-top: 10px solid #0096FF;
 }
 /* Coloring for pick-up (bottom border) */
 .mother-pickup {
